--- a/nimgame.html
+++ b/nimgame.html
@@ -11,7 +11,7 @@
 
   <div class="heading">
     <h1>WELCOME  &nbsp TO  &nbsp NIM &nbsp GAME..</h1>
-    <marquee>  ~~~ 😉let's se who wins the game👻 ~~~  </marquee>
+    <marquee>  ~~~ 😉let's see who wins the game👻 ~~~  </marquee>
   </div>
 
   <div class="stones">
