--- a/nimgame.html
+++ b/nimgame.html
@@ -28,9 +28,9 @@
       <p id="demo1"></p>
     <h4 id="remaining">&nbsp &nbsp &nbsp &nbsp &nbsp
        Select the no. of balls given below :</h4>
-       <button type="button" name="Player 1"   disabled="false" id="countButton1" value="1">1</button>
-       <button type="button" name="Player 1"  disabled="false" id="countButton2" value="2">2</button>
-       <button type="button" name="Player 1" disabled="false" id="countButton3" value="3">3</button>
+       <button type="button" name="Player 1"  id="countButton1" value="1">1</button>
+       <button type="button" name="Player 1"  id="countButton2" value="2">2</button>
+       <button type="button" name="Player 1"  id="countButton3" value="3">3</button>
 
   </div>
 
