--- a/nimgame.html
+++ b/nimgame.html
@@ -10,10 +10,12 @@
   <body>
 
   <div class="heading">
+      <center>
     <h1>WELCOME  &nbsp TO  &nbsp NIM &nbsp GAME..</h1>
+          </center>
     <marquee>  ~~~ 😉let's see who wins the game👻 ~~~  </marquee>
   </div>
-
+  <center>
   <div class="stones">
     <img src="stones1.jpg" alt=""><br />
     <br>&nbsp Enter the no. of stones:
@@ -21,7 +23,8 @@
     <button type="button" name="button" onclick="func()" align="center">START</button>
     <center><h5 id="start" ></h5></center>
   </div>
-
+</center>
+      <center>
   <div class="players">
       <h5 id="player1" ></h5>
     <p id="demo"></p>
@@ -33,7 +36,7 @@
        <button type="button" name="Player 1"  id="countButton3" value="3">3</button>
 
   </div>
-
+  </center>
 
   <script src="index.js" charset="utf-8"></script>
 
